# Stack-Lang

./: .gitignore  CMakeLists.txt  LICENCE.md  Makefile  README.md  a.out  test.out
.github/workflows/: cmake-single-platform.yml
src/: baskvm.cpp  baskvm.h  byte_ops.cpp  byte_ops.h  config.cpp  config.h  datatypes.h  inbuilt.cpp  inbuilt.h  input_parser.h  logger.h  main.cpp  opcode.h  stack.h  values.h
src/compiler/: code_gen.cpp  compiler.cpp  compiler.h  functions.cpp  lexer.cpp  logger.h  macros.cpp  pre_process.cpp  string_ops.cpp  string_ops.h  token.h  values.h
src/include/: compiler.h  config.h  datatypes.h  inbuilt.h  logger.h  opcode.h  stack.h  string_ops.h  token.h  values.h  vm.h
src/portable/: .gitignore  Makefile  bask_portable  baskvm.h  main.cpp  test.out  vm.h
src/vm/: baskvm.cpp  baskvm.h  byte_ops.cpp  byte_ops.h  inbuilt.cpp  inbuilt.h  logger.h  stack.cpp  stack.h  values.h  vm.cpp  vm.h
src/vm/portable/: Makefile  a.out  bask_portable_test  baskvm.h  main.cpp
std/: Makefile  a.out  stack.bsk  str.bsk  str.sl
test/: a.out  factorial.bsk  factorial.sl  fib.basm  fib.bsk  fib.sl  helloworld.sl  test  test.basm  test.bsk  test.bskbyte  test.bskbyte.bak  test.out  test.sl  test2.bsk  test2.sl  test3.bsk
test/multiple_files/: test1.sl
